language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_type_variant_from_unqualified_reference.snap
---
source: language-server/src/tests/reference.rs
expression: "\nimport mod.{Wibble}\n\npub fn main() {\n  let value = mod.Wibble\n  Wibble\n}\n"
---
-- mod.gleam

pub type Wibble { Wibble }
                  ▔▔▔▔▔▔  

fn wobble() {
  Wibble
  ▔▔▔▔▔▔
}


-- app.gleam

import mod.{Wibble}
            ▔▔▔▔▔▔ 

pub fn main() {
  let value = mod.Wibble
                  ▔▔▔▔▔▔
  Wibble
  ↑▔▔▔▔▔
}
