language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_value_from_import_as.snap
---
source: language-server/src/tests/reference.rs
expression: "\nimport mod.{wibble as wobble}\n\npub fn main() {\n  let value = wobble()\n  mod.wibble()\n  value\n}\n"
---
-- mod.gleam

pub fn wibble() {
       ▔▔▔▔▔▔    
  wibble()
  ▔▔▔▔▔▔  
}


-- app.gleam

import mod.{wibble as wobble}
            ▔▔▔▔▔▔ ↑         

pub fn main() {
  let value = wobble()
              ▔▔▔▔▔▔  
  mod.wibble()
      ▔▔▔▔▔▔  
  value
}
